fix : visible class added

--- a/static/assets/css/dashboard.css
+++ b/static/assets/css/dashboard.css
@@ -20048,24 +20048,6 @@ h3 input.search-input {
 }
 
 
-.filter-dropdown {
-  position: absolute;
-  z-index: 1;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
-  border-radius: 4px;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
-}
-
-.filter-dropdown.show {
-  opacity: 1;
-  visibility: visible;
-}
-
 .custom-dropdown {
   position: relative;
   display: inline-block;
@@ -20125,6 +20107,7 @@ h3 input.search-input {
   display: block;
   cursor: pointer;
 }
+
 
 .sidebar {
   background-color: #fff;
